--- a/style.css
+++ b/style.css
@@ -1318,13 +1318,13 @@ h1.site-title {
   clear: both;
   height: .5rem; }
 
-.story-card.card-txt > a {
+.story-card.card-noimg > a {
   background: #ddd; }
 
-.story-card.card-txt > a:hover {
+.story-card.card-noimg > a:hover {
   background: #ccc; }
 
-.story-card.card-txt > a h2 {
+.story-card.card-noimg > a h2 {
   background-color: transparent;
   box-decoration-break: clone;
   -webkit-box-shadow: 0.5rem 0 0 transparent, -0.5rem 0 0 transparent;
@@ -1345,7 +1345,7 @@ h1.site-title {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease; }
 
-.story-card.card-txt > a:hover h2 {
+.story-card.card-noimg > a:hover h2 {
   background-color: #1330bf;
   color: #fcfcfc;
   -webkit-box-shadow: 0.5rem 0 0 #1330bf, -0.5rem 0 0 #1330bf;
@@ -1354,8 +1354,8 @@ h1.site-title {
   -o-box-shadow: 0.5rem 0 0 #1330bf, -0.5rem 0 0 #1330bf;
   box-shadow: 0.5rem 0 0 #1330bf, -0.5rem 0 0 #1330bf; }
 
-.story-card.card-txt > a p,
-.story-card.card-txt > a .continue {
+.story-card.card-noimg > a p,
+.story-card.card-noimg > a .continue {
   background-color: none;
   box-decoration-break: clone;
   -webkit-box-shadow: none;
@@ -1376,7 +1376,7 @@ h1.site-title {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease; }
 
-.story-card.card-txt > a .continue {
+.story-card.card-noimg > a .continue {
   -webkit-box-shadow: 0.5rem 0 0 transparent, -0.5rem 0 0 transparent;
   -mox-box-shadow: 0.5rem 0 0 transparent, -0.5rem 0 0 transparent;
   -ms-box-shadow: 0.5rem 0 0 transparent, -0.5rem 0 0 transparent;
@@ -1384,7 +1384,7 @@ h1.site-title {
   box-shadow: 0.5rem 0 0 transparent, -0.5rem 0 0 transparent;
   color: #1330bf; }
 
-.story-card.card-txt > a:hover p {
+.story-card.card-noimg > a:hover p {
   background-color: transparent;
   -webkit-box-shadow: none;
   -mox-box-shadow: none;
@@ -1393,7 +1393,7 @@ h1.site-title {
   box-shadow: none;
   color: #333; }
 
-.story-card.card-txt > a:hover .continue {
+.story-card.card-noimg > a:hover .continue {
   background-color: #1330bf;
   -webkit-box-shadow: 0.5rem 0 0 #1330bf, -0.5rem 0 0 #1330bf;
   -mox-box-shadow: 0.5rem 0 0 #1330bf, -0.5rem 0 0 #1330bf;
@@ -1401,6 +1401,14 @@ h1.site-title {
   -o-box-shadow: 0.5rem 0 0 #1330bf, -0.5rem 0 0 #1330bf;
   box-shadow: 0.5rem 0 0 #1330bf, -0.5rem 0 0 #1330bf;
   color: #fcfcfc; }
+
+.story-card.card-txt > a {
+  background-position: 50% 0;
+  background-size: auto 35%; }
+
+.story-card.card-txt > a > .text {
+  position: absolute;
+  top: calc(35% + 1rem); }
 
 @media (min-width: 450px) {
   .card-row {
