Simplified comments and initial styles

--- a/css/style.scss
+++ b/css/style.scss
@@ -1463,6 +1463,11 @@ h1.site-title {
 
 
 
+/* comments **************************************************************************************/
+
+@import 'comments';
+
+
 
 
 
