Article card-noimg and card-img working

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -5,9 +5,11 @@ $voared:    #d41010;
 $voagray:   #919191;
 
 $offwhite:  #fcfcfc;
+$dkwhite:   #f6f6f6;
 
 $bodybg:    #eee;
 
+$ultgray:   #e6e6e6;
 $vltgray:   #ddd;
 $mltgray:	#ccc;
 $ltgray:    #999;
